# voicevox-talking-with-vrm-app

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  eslint.config.js  vite.config.ts
.github/workflows/: ci.yaml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  main.py  schemas.py
backend/app/providers/: base.py  factory.py  gemini_provider.py  ollama_provider.py  openai_provider.py  persona.py  voicevox_provider.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatPanel.tsx  SceneCanvas.tsx  TsukushiModel.tsx
frontend/src/hooks/: useAudioPlayback.ts  useVrmAnimations.ts  useVrmLoader.ts  useVrmPose.ts
frontend/src/types/: chat.ts
frontend/src/utils/: three-disposal.ts
