[project]
name = "voicevox-vrm-api"
version = "0.1.0"
description = "FastAPI backend for voicevox-vrm-app"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "pydantic==2.13.3",
    "pydantic-settings==2.14.0",
    "httpx==0.28.1",
    "openai==2.34.0",
    "google-genai==1.75.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.ty.environment]
python = "./.venv"
python-version = "3.12"
root = ["./"]
